--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                     <img id="donateImage" src="" class="img-fluid rounded mb-3">
                     
                 </div>
+                <div class="modal-body text-center">
+                    <img id="donateImage" src="" class="img-fluid rounded mb-3">
+                    <a id="downloadQR" href="#" class="btn btn-primary mt-3" download="./img/qr-code-15k.jpg">Download QR Code</a>
+                </div>                
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                 </div>
