--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="modal-body text-center">
                     <img id="donateImage" src="" class="img-fluid rounded mb-3">
-                    <a id="downloadQR" href="#" class="btn btn-primary mt-3" download="qr-buyacoffee">Download QR Code</a>
+                    <a id="downloadQR" href="#" class="btn btn-primary mt-3" download="qr-buyacoffee.jpg">Download QR Code</a>
                 </div>                
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
