--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buy Me a Coffee</title>
     <link rel="icon" href="./img/logo.png" type="image/x-icon">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Buy Me a Coffee">
+    <meta property="og:description" content="Giúp đỡ sinh viên khó khăn">
+    <meta property="og:image" content="./img/logo.png">
+    <meta property="og:url" content="https://nicodolas.github.io/buymeacoffee/">
+    <meta property="og:type" content="website">
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
