--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Buy Me a Coffee">
     <meta property="og:description" content="Giúp đỡ sinh viên khó khăn">
-    <meta property="og:image" content="./img/logo.png">
+    <meta property="og:image" content="https://i.pinimg.com/736x/a3/17/08/a317085b479e7cdff35a3c69f0d57b02.jpg">
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
